@@ -145,9 +145,9 @@ public class MainTest {
     public void testFindUniqueWordsMethod() {
         assertEquals(StringSet.findUniqueWords().size(), 143);
 
-        List<String> results = StringSet.findUniqueWords().stream().collect(Collectors.toList());
-        assertEquals(results.get(0), "a");
-        assertEquals(results.get(results.size()-1), "wrote");
-
+        List<String> results = StringSet.findUniqueWords().stream().toList();
+        assertEquals("a", results.get(0));
+        assertEquals("wrote", results.get(results.size()-1));
+-ğ
     }
 }
